// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewCreatedPolicy expect to render without error 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ReviewCreatedPolicy)
    osMajorVersion="7"
  >
    <ReviewCreatedPolicy
      benchmarkId="a5e7f1ea-e63c-40be-a17a-c2a247c11e10"
      complianceThreshold={100}
      dispatch={[Function]}
      name="C2S for Red Hat Enterprise Linux 6"
      osMajorVersion="7"
      osMinorVersionCounts={
        Array [
          Object {
            "count": 10,
            "osMinorVersion": 7,
          },
          Object {
            "count": 3,
            "osMinorVersion": 5,
          },
        ]
      }
      parentProfileName="C2S for Red Hat Enterprise Linux 6"
      refId="xccdf_org.ssgproject.content_profile_C2S"
      rulesCount={1}
    >
      <TextContent>
        <div
          className="pf-c-content"
        >
          <Text
            component="h1"
          >
            <h1
              className=""
              data-ouia-component-id="OUIA-Generated-Text-1"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe={true}
              data-pf-content={true}
            >
              Review
            </h1>
          </Text>
          <Text>
            <p
              className=""
              data-ouia-component-id="OUIA-Generated-Text-2"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe={true}
              data-pf-content={true}
            >
              Review your SCAP policy before finishing.
            </p>
          </Text>
          <Text
            component="h3"
            style={
              Object {
                "marginTop": 0,
              }
            }
          >
            <h3
              className=""
              data-ouia-component-id="OUIA-Generated-Text-3"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe={true}
              data-pf-content={true}
              style={
                Object {
                  "marginTop": 0,
                }
              }
            >
              C2S for Red Hat Enterprise Linux 6
            </h3>
          </Text>
          <TextList
            component="dl"
          >
            <dl
              className=""
            >
              <TextListItem
                component="dt"
              >
                <dt
                  className=""
                >
                  Policy type
                </dt>
              </TextListItem>
              <TextListItem
                component="dd"
              >
                <dd
                  className=""
                >
                  C2S for Red Hat Enterprise Linux 6
                </dd>
              </TextListItem>
              <TextListItem
                component="dt"
              >
                <dt
                  className=""
                >
                  Compliance threshold
                </dt>
              </TextListItem>
              <TextListItem
                component="dd"
              >
                <dd
                  className=""
                >
                  100
                  %
                </dd>
              </TextListItem>
              <TextListItem
                component="dt"
              >
                <dt
                  className=""
                >
                  Systems
                </dt>
              </TextListItem>
              <TextListItem
                component="dd"
              >
                <dd
                  className=""
                >
                  <TextList
                    component="dl"
                  >
                    <dl
                      className=""
                    >
                      <TextListItem
                        component="dt"
                        style={
                          Object {
                            "fontWeight": "normal",
                          }
                        }
                      >
                        <dt
                          className=""
                          style={
                            Object {
                              "fontWeight": "normal",
                            }
                          }
                        >
                          RHEL 
                          7
                          .
                          7
                        </dt>
                      </TextListItem>
                      <TextListItem
                        component="dd"
                      >
                        <dd
                          className=""
                        >
                          10
                           
                          systems
                        </dd>
                      </TextListItem>
                      <TextListItem
                        component="dt"
                        style={
                          Object {
                            "fontWeight": "normal",
                          }
                        }
                      >
                        <dt
                          className=""
                          style={
                            Object {
                              "fontWeight": "normal",
                            }
                          }
                        >
                          RHEL 
                          7
                          .
                          5
                        </dt>
                      </TextListItem>
                      <TextListItem
                        component="dd"
                      >
                        <dd
                          className=""
                        >
                          3
                           
                          systems
                        </dd>
                      </TextListItem>
                    </dl>
                  </TextList>
                </dd>
              </TextListItem>
            </dl>
          </TextList>
        </div>
      </TextContent>
    </ReviewCreatedPolicy>
  </Connect(ReviewCreatedPolicy)>
</Provider>
`;

exports[`ReviewCreatedPolicy should render a spinner while loading 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ReviewCreatedPolicy)
    osMajorVersion="7"
  >
    <ReviewCreatedPolicy
      benchmarkId="a5e7f1ea-e63c-40be-a17a-c2a247c11e10"
      complianceThreshold={100}
      dispatch={[Function]}
      name="C2S for Red Hat Enterprise Linux 6"
      osMajorVersion="7"
      osMinorVersionCounts={
        Array [
          Object {
            "count": 10,
            "osMinorVersion": 7,
          },
          Object {
            "count": 3,
            "osMinorVersion": 5,
          },
        ]
      }
      parentProfileName="C2S for Red Hat Enterprise Linux 6"
      refId="xccdf_org.ssgproject.content_profile_C2S"
      rulesCount={1}
    >
      <TextContent>
        <div
          className="pf-c-content"
        >
          <Text
            component="h1"
          >
            <h1
              className=""
              data-ouia-component-id="OUIA-Generated-Text-4"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe={true}
              data-pf-content={true}
            >
              Review
            </h1>
          </Text>
          <Text>
            <p
              className=""
              data-ouia-component-id="OUIA-Generated-Text-5"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe={true}
              data-pf-content={true}
            >
              Review your SCAP policy before finishing.
            </p>
          </Text>
          <Text
            component="h3"
            style={
              Object {
                "marginTop": 0,
              }
            }
          >
            <h3
              className=""
              data-ouia-component-id="OUIA-Generated-Text-6"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe={true}
              data-pf-content={true}
              style={
                Object {
                  "marginTop": 0,
                }
              }
            >
              C2S for Red Hat Enterprise Linux 6
            </h3>
          </Text>
          <TextList
            component="dl"
          >
            <dl
              className=""
            >
              <TextListItem
                component="dt"
              >
                <dt
                  className=""
                >
                  Policy type
                </dt>
              </TextListItem>
              <TextListItem
                component="dd"
              >
                <dd
                  className=""
                >
                  C2S for Red Hat Enterprise Linux 6
                </dd>
              </TextListItem>
              <TextListItem
                component="dt"
              >
                <dt
                  className=""
                >
                  Compliance threshold
                </dt>
              </TextListItem>
              <TextListItem
                component="dd"
              >
                <dd
                  className=""
                >
                  100
                  %
                </dd>
              </TextListItem>
              <TextListItem
                component="dt"
              >
                <dt
                  className=""
                >
                  Systems
                </dt>
              </TextListItem>
              <TextListItem
                component="dd"
              >
                <dd
                  className=""
                >
                  <TextList
                    component="dl"
                  >
                    <dl
                      className=""
                    >
                      <TextListItem
                        component="dt"
                        style={
                          Object {
                            "fontWeight": "normal",
                          }
                        }
                      >
                        <dt
                          className=""
                          style={
                            Object {
                              "fontWeight": "normal",
                            }
                          }
                        >
                          RHEL 
                          7
                          .
                          7
                        </dt>
                      </TextListItem>
                      <TextListItem
                        component="dd"
                      >
                        <dd
                          className=""
                        >
                          10
                           
                          systems
                        </dd>
                      </TextListItem>
                      <TextListItem
                        component="dt"
                        style={
                          Object {
                            "fontWeight": "normal",
                          }
                        }
                      >
                        <dt
                          className=""
                          style={
                            Object {
                              "fontWeight": "normal",
                            }
                          }
                        >
                          RHEL 
                          7
                          .
                          5
                        </dt>
                      </TextListItem>
                      <TextListItem
                        component="dd"
                      >
                        <dd
                          className=""
                        >
                          3
                           
                          systems
                        </dd>
                      </TextListItem>
                    </dl>
                  </TextList>
                </dd>
              </TextListItem>
            </dl>
          </TextList>
        </div>
      </TextContent>
    </ReviewCreatedPolicy>
  </Connect(ReviewCreatedPolicy)>
</Provider>
`;
